fix margins on small displays

--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,11 @@ input:checked + .slider:before {
     height: 600px;
   }
 
+  #keyboard {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+
   #rightPane {
     grid-template-rows: 1fr 1.5fr 1.5fr 1.5fr;
     grid-row-gap: 0px;
@@ -182,9 +187,6 @@ input:checked + .slider:before {
   .logo {
     width: 20px;
     height: 20px;
-    /* margin-top: 5px;
-    margin-right: 10px;
-    justify-self: end; */
   }
 
   #firstLogo {
